RESOLVED FIXED193015
Fix fast/ruby/ruby-base-merge-block-children-crash-2.html after r239543
https://bugs.webkit.org/show_bug.cgi?id=193015
Summary Fix fast/ruby/ruby-base-merge-block-children-crash-2.html after r239543
Wenson Hsieh
Reported 2018-12-23 13:22:34 PST
Tracking as a followup to <rdar://problem/46583527>.
Attachments
Patch (2.72 KB, patch)
2018-12-23 15:04 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-12-23 15:04:24 PST
WebKit Commit Bot
Comment 2 2018-12-23 15:51:41 PST
Comment on attachment 358030 [details] Patch Clearing flags on attachment: 358030 Committed r239546: <https://trac.webkit.org/changeset/239546>
WebKit Commit Bot
Comment 3 2018-12-23 15:51:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.